--- a/templates/daily.html
+++ b/templates/daily.html
@@ -150,7 +150,8 @@
                   <div class="prediction-card h-100 p-3">
                     <div class="d-flex align-items-center mb-3">
                       <i class="fas fa-atom fs-4 text-primary me-2"></i>
-                      <h5 class="mb-0">ATM ${prediction.atm_id}</h5>
+                      <h5 class="mb-0"> ${prediction.atm_id}</h5>
+                      <!-- ATM-if hard code is used-->
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                       <div>
