--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -151,7 +151,7 @@
                   <div class="prediction-card h-100 p-3">
                     <div class="d-flex align-items-center mb-3">
                       <i class="fas fa-calendar-week fs-4 text-success me-2"></i>
-                      <h5 class="mb-0">ATM ${prediction.atm_id}</h5>
+                      <h5 class="mb-0"> ${prediction.atm_id}</h5>
                     </div>
                     <div class="d-flex justify-content-between align-items-center mb-3">
                       <div class="week-indicator">
