Add currency labels (AFN/USD) to cash display for better clarity

--- a/templates/daily.html
+++ b/templates/daily.html
@@ -212,9 +212,9 @@
               const usd = data[atmId].USD.toLocaleString();
 
               if (selectedCurrency === "AFN") {
-                span.innerHTML = `${afn}`;
+                span.innerHTML = `${afn} AFN`;
               } else if (selectedCurrency === "USD") {
-                span.innerHTML = `${usd}`;
+                span.innerHTML = `${usd} USD`;
               } else {
                 span.innerHTML = `${afn}<br>${usd}`;
               }
